# GPT-pptx-Explainer

./: .gitignore  README.md  ai_api.py  ai_summery.py  async_tasks.py  main.py  pptx_extractor.py  pyproject.toml  read_pptx.py  requirements.txt  setup.py  test_pptx_extractor_ai_summery.py  upload_file.py
client/: client.py
client/logs/: client.log.2024-06-25
client/pptx_files/: DEMO.pptx
client/scripts/: client.py
configs/: client_config.py  explainer_config.py  web_api_config.py
demo_files/: DEMO.pptx
explainer/: ai_api.py  async_tasks.py  main.py  pptx_extractor.py
explainer/outputs/: DEMCopy_2024-06-25[12-43-48]_69da7743-f4f9-45e6-8d50-1c226d61dd46.json  DEMCopy_2024-06-26[21-30-37]_43c1b1cb-2a16-468a-9ca5-ef1e01283798.json  DEMCopy_2024-06-26[21-52-03]_4bd79072-0c00-412a-bcef-fd889fc43a40.json  DEMO_2024-06-26[20-25-50]_32cfe137-c4c9-4767-b65c-49e13228d00b.json  DEMO_2024-06-26[21-52-36]_c93634f1-7b5b-4ed4-9771-6253eca59b20.json
explainer/scripts/: ai_api.py  async_tasks.py  main.py  pptx_extractor.py
outputs/: DEMO.json  example_pptx.json
run_all_module/: run_all.py
tests/: conftest.py  test_client.py  test_explainer.py  test_pptx_extractor_ai_summery.py  test_web_api.py
tests/demo_files/: DEMO.pptx
web_api/: app.py
web_api/logs/: web_api.log.2024-06-25
web_api/scripts/: app.py
